# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/access_token/access_token.gni")
import("//build/ohos.gni")

config("accesstoken") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

if (is_standard_system) {
  ohos_shared_library("libaccesstoken_sdk") {
    subsystem_name = "security"
    part_name = "access_token"

    output_name = "libaccesstoken_sdk"

    public_configs = [ ":accesstoken" ]

    include_dirs = [
      "//commonlibrary/c_utils/base/include",
      "include",
      "src",
      "//base/security/access_token/frameworks/accesstoken/include",
      "//base/security/access_token/frameworks/common/include",
      "//base/security/access_token/interfaces/innerkits/accesstoken/include",
      "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    ]

    sources = [
      "src/accesstoken_death_recipient.cpp",
      "src/accesstoken_kit.cpp",
      "src/accesstoken_manager_client.cpp",
      "src/accesstoken_manager_proxy.cpp",
      "src/perm_state_change_callback_customize.cpp",
      "src/permission_state_change_callback.cpp",
      "src/permission_state_change_callback_stub.cpp",
    ]

    deps = [
      "//base/security/access_token/frameworks/accesstoken:accesstoken_communication_adapter_cxx",
      "//base/security/access_token/frameworks/common:accesstoken_common_cxx",
      "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    ]

    external_deps = [
      "c_utils:utils",
      "hisysevent_native:libhisysevent",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_single",
      "samgr:samgr_proxy",
    ]

    configs = [ "//base/security/access_token/config:coverage_flags" ]

    cflags_cc = [
      "-DHILOG_ENABLE",
      "-DDEBUG_API_PERFORMANCE",
    ]
    if (token_sync_enable == true) {
      cflags_cc += [ "-DTOKEN_SYNC_ENABLE" ]
    }
  }
}
