# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

################################################################
# C, Main, source file here.
################################################################
config("accesstokenlib") {
  visibility = [ ":*" ]
  include_dirs = [ "main/include" ]
}

ohos_shared_library("libaccesstoken_lib") {
  subsystem_name = "security"
  part_name = "access_token"
  output_name = "libaccesstoken_lib"

  public_configs = [ ":accesstokenlib" ]

  cflags = [ "-Wall" ]

  include_dirs = [
    "//utils/native/base/include",
    "main/include",
    "main/src",
    "//third_party/cJSON",
    "//third_party/bounds_checking_function/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
  ]

  sources = [
    "main/src/accesstoken_lib.c",
  ]

  deps = [
    "//utils/native/base:utils",
    "//third_party/cJSON:cjson_static",
    "//utils/native/base:utilsecurec_shared",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
  ]
}
