# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("accesstokenlib") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

if (is_standard_system) {
  ohos_static_library("libnativetoken") {
    subsystem_name = "security"
    part_name = "access_token"
    output_name = "libnativetoken"

    public_configs = [ ":accesstokenlib" ]

    cflags = [ "-Wall" ]

    include_dirs = [
      "include",
      "src",
      "//third_party/cJSON",
      "//third_party/bounds_checking_function/include",
    ]

    sources = [
      "src/nativetoken.c",
      "src/nativetoken_json_oper.c",
    ]

    deps = [
      "//third_party/bounds_checking_function:libsec_static",
      "//third_party/cJSON:cjson_static",
    ]

    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

    if (build_selinux) {
      external_deps += [ "selinux:librestorecon" ]
      cflags += [ "-DWITH_SELINUX" ]
    }
  }
}
