# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("token_callback") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

if (is_standard_system) {
  ohos_shared_library("libtoken_callback_sdk") {
    subsystem_name = "security"
    part_name = "access_token"

    output_name = "libtoken_callback_sdk"

    public_configs = [ ":token_callback" ]

    configs = [ "//base/security/access_token/config:coverage_flags" ]

    include_dirs = [
      "//commonlibrary/c_utils/base/include",
      "include",
      "src",
      "//base/security/access_token/frameworks/privacy/include",
      "//base/security/access_token/frameworks/common/include",
    ]

    sources = [ "src/token_callback_stub.cpp" ]

    deps = []

    external_deps = [
      "c_utils:utils",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
    ]

    cflags_cc = [
      "-DHILOG_ENABLE",
      "-DDEBUG_API_PERFORMANCE",
    ]
  }
}
