# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/security/access_token/access_token.gni")
import("//build/ohos.gni")

config("tokensync") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

if (is_standard_system) {
  ohos_shared_library("libtokensync_sdk") {
    subsystem_name = "security"
    part_name = "access_token"

    output_name = "libtokensync_sdk"

    public_configs = [ ":tokensync" ]

    include_dirs = [
      "//commonlibrary/c_utils/base/include",
      "include",
      "src",
      "//base/security/access_token/frameworks/tokensync/include",
      "//base/security/access_token/frameworks/common/include",
      "//base/security/access_token/interfaces/innerkits/tokensync/include",
      "//base/security/access_token/interfaces/innerkits/accesstoken/include",
      "//base/security/access_token/frameworks/accesstoken/include",
      "//foundation/distributedhardware/device_manager/interfaces/inner_kits/native_cpp/include",
      "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
    ]

    sources = [
      "src/token_sync_death_recipient.cpp",
      "src/token_sync_kit.cpp",
      "src/token_sync_load_callback.cpp",
      "src/token_sync_manager_client.cpp",
      "src/token_sync_manager_proxy.cpp",
    ]

    deps = [
      "//base/security/access_token/frameworks/accesstoken:accesstoken_communication_adapter_cxx",
      "//base/security/access_token/frameworks/common:accesstoken_common_cxx",
    ]

    external_deps = [
      "c_utils:utils",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "samgr:samgr_proxy",
    ]

    configs = [ "//base/security/access_token/config:coverage_flags" ]

    cflags_cc = [ "-DHILOG_ENABLE" ]
  }
}
