# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("../../../access_token.gni")

config("tokensync") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

if (is_standard_system) {
  ohos_shared_library("libtokensync_sdk") {
    subsystem_name = "security"
    part_name = "access_token"
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
    }
    branch_protector_ret = "pac_ret"
    output_name = "libtokensync_sdk"

    public_configs = [ ":tokensync" ]

    include_dirs = [
      "${access_token_path}/frameworks/accesstoken/include",
      "${access_token_path}/frameworks/common/include",
      "${access_token_path}/frameworks/tokensync/include",
      "${access_token_path}/interfaces/innerkits/accesstoken/include",
      "include",
      "src",
    ]

    sources = [
      "src/token_sync_kit.cpp",
      "src/token_sync_kit_loader.cpp",
      "src/token_sync_manager_client.cpp",
      "src/token_sync_manager_proxy.cpp",
    ]

    deps = [
      "${access_token_path}/frameworks/accesstoken:accesstoken_communication_adapter_cxx",
      "${access_token_path}/frameworks/common:accesstoken_common_cxx",
    ]

    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
      "ipc:ipc_core",
      "samgr:samgr_proxy",
    ]

    configs = [ "${access_token_path}/config:coverage_flags" ]

    cflags_cc = [ "-DHILOG_ENABLE" ]
  }
}
