# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libabilityaccessctrl") {
  include_dirs = [
    "//base/security/access_token/frameworks/common/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/kits/accesstoken/napi/include",
    "//foundation/ace/napi/interfaces/innerkits",
    "//foundation/ace/napi/interfaces/kits",
  ]

  sources = [ "//base/security/access_token/interfaces/kits/accesstoken/napi/src/napi_atmanager.cpp" ]

  deps = [
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//foundation/ace/napi:ace_napi",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "security"
  part_name = "access_token"
}
