# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libabilityaccessctrl") {
  include_dirs = [
    "//base/security/access_token/frameworks/common/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//base/security/access_token/interfaces/kits/accesstoken/napi/include",
    "//base/security/access_token/interfaces/kits/common/include",
    "//base/security/access_token/interfaces/innerkits/token_callback/include",
    "//foundation/arkui/napi/interfaces/inner_api",
    "//foundation/arkui/napi/interfaces/kits",
  ]

  sources = [
    "//base/security/access_token/interfaces/kits/accesstoken/napi/src/napi_atmanager.cpp",
    "//base/security/access_token/interfaces/kits/accesstoken/napi/src/napi_context_common.cpp",
  ]

  deps = [
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/security/access_token/interfaces/innerkits/token_callback:libtoken_callback_sdk",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//base/security/access_token/interfaces/kits/common:libnapi_common",
    "//foundation/arkui/napi:ace_napi",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
  ]
  configs = [ "//base/security/access_token/config:coverage_flags" ]

  relative_install_dir = "module"
  subsystem_name = "security"
  part_name = "access_token"
}
